// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-servers return errors if servers is an empty array  1`] = `
Array [
  Object {
    "code": "api-servers",
    "message": "should NOT have fewer than 1 items",
    "path": Array [
      "servers",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 3,
      },
      "start": Object {
        "character": 12,
        "line": 3,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "OpenAPI \`servers\` must be present and non-empty array.",
  },
]
`;

exports[`api-servers return errors if servers is missing  1`] = `
Array [
  Object {
    "code": "api-servers",
    "message": "servers does not exist",
    "path": Array [
      "servers",
    ],
    "range": Object {
      "end": Object {
        "character": 13,
        "line": 2,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "OpenAPI \`servers\` must be present and non-empty array.",
  },
]
`;
